fix: group constant fields for improved readability